--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
   margin: 0;
@@ -6,7 +6,7 @@
   border: 0;
   outline: 0;
   box-sizing: border-box;
-  list-style: none;
+  /* list-style: none; */
   text-decoration: none;
 }
 
@@ -33,7 +33,7 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: var(--color-bg);
+  background-color: #0D0F20;
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../src/assets/bg-texture.png);
@@ -57,12 +57,13 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 9rem;
+  /* height: 100vh; */
 }
 
 section>h2,
 h5 {
-  /* text-align: center; */
+  text-align: center;
   color: var(--color-light)
 }
 
@@ -72,6 +73,7 @@ section>h2 {
 }
 
 a {
+  text-decoration: none;
   color: var(--color-primary);
   transition: var(--transition);
 }
@@ -98,31 +100,47 @@ a:hover {
   border-color: transparent;
 }
 
-.btn-primary{
+.btn-primary {
   background: var(--color-primary);
   color: var(--color-bg);
 }
 
-img{
+img {
   display: block;
-  width : 100%;
-  object-fit:cover;
+  width: 100%;
+  object-fit: cover;
 }
 
 /*=========================MEDIA QUERIES(MEDIUM SCREEN)===========*/
-@media screen and  (max-width : 1024px){
-  .container{
+@media screen and (max-width : 1024px) {
+  .container {
     width: var(--container-width-md);
   }
-  section{
+
+  section {
     margin-top: 6rem;
   }
 }
-@media screen and  (max-width : 600px){
-  .container{
+
+@media screen and (max-width : 600px) {
+  .container {
     width: var(--container-width-sm);
   }
-  section{
+
+  section {
     margin-top: 2rem;
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-weight: 300;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
 }
