--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -101,7 +101,7 @@
     }
     .about_cards{
         grid-template-columns:  1fr 1fr;
-        gap : 1rem
+        gap : 1rem;
     }
     .about_content{
         text-align: center;
