--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300;400;500;600&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -64,7 +63,7 @@ section {
 section>h2,
 h5 {
   text-align: center;
-  color: var(--color-light)
+  color: var(--color-light);
 }
 
 section>h2 {
@@ -79,7 +78,7 @@ a {
 }
 
 a:hover {
-  color: var(--color-white)
+  color: var(--color-white);
 }
 
 .btn {
