--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
   text-decoration: none;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 :root {
   --color-bg: #1f1f38;
   --color-bg-variant: #2c2c6c;
@@ -36,6 +41,11 @@ body {
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../src/assets/bg-texture.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 .container {
