--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ html, body {
 
   --transition: all 400ms ease;
   --container-width-lg: 75%;
-  --container-width-md: 86% --container-width-sm: 90%;
+  --container-width-md: 86%; --container-width-sm: 90%;
 }
 
 html {
